--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "lucide-react": "^0.510.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.5.3"
-    
+    "react-router": "^7.5.3",
+    "next-sitemap": "^4.2.3"
   },
   "devDependencies": {
-    
     "@eslint/js": "9.25.1",
-    
     "@types/node": "22.14.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "19.0.4",
@@ -32,11 +30,12 @@
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
-  "vite": "6.3.2"
+    "vite": "6.3.2"
   },
   "scripts": {
-  "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build",
     "dev": "vite",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postbuild": "next-sitemap"
   }
 }
