--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "https://prismpalette.vercel.app",
-      "permanent": true
-    }
-  ],
+  "redirects": [],
   "headers": [
     {
       "source": "/(.*)",
